--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,5 +12,6 @@ BBFILE_PRIORITY_storageos = "5"
 LAYERDEPENDS_storageos = "core"
 LAYERDEPENDS_storageos += "security"
 
+IMAGE_INSTALL_append = " dhcp-client"
 IMAGE_INSTALL_append = " libseccomp"
 IMAGE_INSTALL_append = " docker"
