layer.conf: bump layer priority to 10
We want our layer to have the highest priority, so that our recipes take
priority over any other recipes of the same name (e.g., docker).

meta-virtualization is 8, so make this 10 for good measure.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,7 +7,9 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 
 BBFILE_COLLECTIONS += "storageos"
 BBFILE_PATTERN_storageos = "^${LAYERDIR}/"
-BBFILE_PRIORITY_storageos = "5"
+# meta-virtualization is 8, we want to have higher priority, so that
+# that our recipes get used
+BBFILE_PRIORITY_storageos = "10"
 
 LAYERDEPENDS_storageos = "core"
 LAYERDEPENDS_storageos += "security"
