--- a/recipes-kernel/linux/files/iptables.cfg
+++ b/recipes-kernel/linux/files/iptables.cfg
@@ -1,4 +1,7 @@
 CONFIG_NETFILTER_XT_NAT=m
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
+CONFIG_NETFILTER_XT_MATCH_CGROUP=m
+
 CONFIG_IP_NF_NAT=m
 # CONFIG_IP_NF_TARGET_MASQUERADE is not set
 # CONFIG_IP_NF_TARGET_NETMAP is not set
